OpenSheetMusicDisplay lib and Groover briefly added

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <script src="/src/lib-js/opensheetmusicdisplay.min.js"></script> <!-- you need to provide the .js file, see README.md-->
   </body>
 </html>
