--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
-    <script src="/src/lib-js/opensheetmusicdisplay.min.js"></script> <!-- you need to provide the .js file, see README.md-->
+    <!-- One will work and the other won't, in both DEV and PROD-->
+    <script src="/lib-js/opensheetmusicdisplay.min.js"></script>
+    <script src="/app/time-flies/lib-js/opensheetmusicdisplay.min.js"></script>
+    <!-- you need to provide the .js file, see README.md-->
   </body>
 </html>
